--- a/JenkinsFile
+++ b/JenkinsFile
@@ -48,4 +48,10 @@ pipeline {
             }
         }
     }
+
+    post {
+        always {
+            junit 'test-results/junit.xml'
+        }
+    }
 }
