--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    environment {
+        NETLIFY_SITE_ID = '4a5fb6db-89f8-4a54-b93d-5d02b329bafd'
+    }
+
     stages {
         stage('Build') {
             agent {
