--- a/JenkinsFile
+++ b/JenkinsFile
@@ -63,6 +63,7 @@ pipeline {
                 sh '''
                     npm install netlify-cli
                     node_modules/.bin/netlify --version
+                    echo "Deploying too production. Site ID: $NETLIFY_SITE_ID"
                 '''
             }
         }
