--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,6 +3,7 @@ pipeline {
 
     environment {
         NETLIFY_SITE_ID = '4a5fb6db-89f8-4a54-b93d-5d02b329bafd'
+        NETLIFY_AUTH_TOKEN = credentials('netlify-token')
     }
 
     stages {
